added intent for launching DetailActivity

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -9,5 +9,11 @@
     tools:context="com.example.rbansal.sunshine.DetailActivityFragment"
     tools:showIn="@layout/activity_detail">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/detail_text"
+        android:text="Hello Wrld"/>
+
 
 </RelativeLayout>
